kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: web # Название нашего объекта Deployment
spec:
   replicas: 3 # Начнем с одного пода
   selector: # Укажем, какие поды относятся к нашему Deployment:
     matchLabels: # - это поды с меткой
      app: web # app и ее значением web
   strategy:
     type: RollingUpdate
     rollingUpdate:
        maxUnavailable: 0
        maxSurge: 100%
   template: # Теперь зададим шаблон конфигурации пода
     metadata:
        labels:
            app: web
     spec:
        containers:
        - name: web
          image: hataldir/simpleweb
          livenessProbe:
            tcpSocket: { port: 8000 }
          readinessProbe: # Добавим проверку готовности
            httpGet:
              path: /index.html # контент
              port: 8000
          volumeMounts:
          - name: app
            mountPath: /app
        volumes:
          - name: app
            emptyDir: {}
